--- a/style.css
+++ b/style.css
@@ -7,12 +7,93 @@
     --clr-neutral-grayish-red: hsl(0, 6%, 24%);
     
     /* Gradients */
-    --clr-gradient-0: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
-    --clr-gradient-1: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    --clr-gradient-bg: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+    --clr-gradient-btn: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     
     --ff-primary: 'Josefin Sans', sans-serif;
     --fs-base: 1rem;
     --fw-light: 300;
     --fw-regular: 400;
     --fw-bold: 600;
+}
+
+body {
+    min-height: 100vh;
+    font-family: var(--ff-primary);
+}
+
+main {
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    height: 100vh;
+    background: var(--clr-gradient-bg);
+}
+
+header {
+    padding: 2rem;
+}
+
+header > img {
+    width: 6.5rem;
+}
+
+.image {
+    grid-row: 2;
+}
+
+.info {
+    padding: 4rem 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+}
+
+.info > h1 {
+    font-size: 2.6rem;
+    font-weight: var(--fw-);
+    text-transform: uppercase;
+    line-height: 2.6rem;
+    letter-spacing: 0.7rem;
+    color: var(--clr-neutral-grayish-red);
+}
+
+.info > h1 > span {
+    color: var(--clr-primary-desat-red);
+    font-weight: var(--fw-light);
+}
+
+.info > p {
+    color: var(--clr-primary-desat-red);
+    font-size: 0.9rem;
+    font-weight: var(--fw-regular);
+}
+
+.input-prompt {
+    position: relative;
+    margin-top: 1rem;
+}
+
+.input-prompt > input {
+    background-color: transparent;
+    color: var(--clr-primary-desat-red);
+    font-size: 0.9rem;
+    width: 100%;
+    border: 1px solid var(--clr-primary-desat-red);
+    border-radius: 48px;
+    padding: 0.8rem 1.5rem;
+    
+}
+
+.input-prompt > button {
+    display: flex;
+    align-items: center;
+    background: var(--clr-gradient-btn);
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    padding: 0 1.6rem;
+    border: none;
+    border-radius: 48px;
 }
