--- a/style.css
+++ b/style.css
@@ -20,12 +20,15 @@
 body {
     min-height: 100vh;
     font-family: var(--ff-primary);
+    display: grid;
+    place-content: center;
 }
 
 main {
     display: grid;
     grid-template-rows: auto auto 1fr;
-    height: 100vh;
+    min-height: 100vh;
+    width: 100%;
     background: var(--clr-gradient-bg);
 }
 
@@ -41,6 +44,40 @@ header > img {
     grid-row: 2;
 }
 
+.image > img {
+    width: 100%;
+}
+
+@media (min-width: 1000px) {
+    main {
+        grid-template-columns: 1fr auto;
+        grid-template-rows: auto 1fr;
+        padding-left: 10rem;
+        background: url(images/bg-pattern-desktop.svg), var(--clr-gradient-bg);
+        background-repeat: no-repeat;
+    }
+
+    header {
+        padding-left: 0;
+        padding-top: 4rem;
+    }
+
+    header > img {
+        width: 10rem;
+    }
+
+    .image {
+        grid-row: 1 / 3;
+        grid-column: 2;
+        display: grid;
+        place-content: center   ;
+    }
+
+    .image > img {
+        content: url("images/hero-desktop.jpg");
+    }
+}
+
 .info {
     padding: 4rem 2rem;
     display: flex;
@@ -51,7 +88,7 @@ header > img {
 
 .info > h1 {
     font-size: 2.6rem;
-    font-weight: var(--fw-);
+    font-weight: var(--fw-bold);
     text-transform: uppercase;
     line-height: 2.6rem;
     letter-spacing: 0.7rem;
@@ -82,7 +119,6 @@ header > img {
     border: 1px solid var(--clr-primary-desat-red);
     border-radius: 48px;
     padding: 0.8rem 1.5rem;
-    
 }
 
 .input-prompt > button {
@@ -96,4 +132,59 @@ header > img {
     padding: 0 1.6rem;
     border: none;
     border-radius: 48px;
+}
+
+.input-prompt > button:hover {
+    opacity: 0.5;
+    box-shadow: 0 16px 12px rgb(0 0 0 / 0.2);;
+}
+
+.info > p.error-msg {
+    color: var(--clr-primary-soft-red);
+    font-size: 0.8rem;
+    padding-left: 1.5rem;
+    text-align: left;
+}
+
+.error-icon {
+    position: absolute;
+    top: 13px;
+    right: 80px;
+}
+
+.error-active {
+    display: none;
+}
+
+@media (min-width: 1000px) {
+    .info {
+        padding: 8rem 14rem 10rem 0;
+        text-align: left;
+    }
+
+    .info > h1 {
+        font-size: 4rem;
+        font-weight: var(--fw-bold);
+        line-height: 4.5rem;
+    }
+
+    .info > p {
+        font-size: 1rem;
+    }
+
+    .input-prompt > button {
+        padding: 0 2.5rem;
+    }
+
+    .info > p.error-msg {
+        color: var(--clr-primary-soft-red);
+        font-size: 0.8rem;
+        padding-left: 1.5rem;
+    }
+    
+    .error-icon {
+        position: absolute;
+        top: 13px;
+        right: 110px;
+    }
 }
